[tool.poetry]
name = "Cipher"
version = "0.1.0"
description = "A package full of functions for encoding and decoding messages from a variety of ciphers.Ciphers found at en.wikipedia.org/wiki/Category:Classical_ciphers. https://inventwithpython.com/cracking/"
authors = ["Kokonico <kokonico@duck.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
auto-mix-prep = "^0.2.0"
cipher = "^0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"