[tool.poetry]
name = "Ciphernoob"
version = "0.1.2"
description = "A package full of functions for encoding and decoding messages from a variety of ciphers.Ciphers found at en.wikipedia.org/wiki/Category:Classical_ciphers. https://inventwithpython.com/cracking/"
authors = ["Kokonico <kokonico@duck.com>", "SoggyWetWater"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
data = "^0.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"